--- a/blocjs.html
+++ b/blocjs.html
@@ -6,8 +6,12 @@
 <body>
   
 <div id="bloc">
-<p id="a">jamal belheraddi</p>
-<p id="b">hicham belheraddi</p>
+   <p>list1</p>
+   <p>list2</p>
+   <p>list3</p>
+   <p>list4</p>
+   <p>list5</p>
+   <p>list6</p>
 
 </div>
 <div id="cc">
